--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-	"name": "final-task",
-	"version": "1.0.0",
-	"description": "",
-	"main": "server.js",
-	"scripts": {
-		"start": "nodemon server.js",
+  "name": "final-task",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
     "client": "npm start --prefix ../client",
     "dev": "concurrently \"npm start \" \"npm run client\""
-	},
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"bcrypt": "^5.0.0",
-		"body-parser": "^1.19.0",
-		"concurrently": "^5.3.0",
-		"cors": "^2.8.5",
-		"express": "^4.17.1",
-		"express-jwt": "^6.0.0",
-		"joi": "^17.3.0",
-		"jsonwebtoken": "^8.5.1",
-		"multer": "^1.4.2",
-		"mysql2": "^2.2.5",
-		"sequelize": "^6.5.0",
-		"sequelize-cli": "^6.2.0"
-	},
-	"devDependencies": {
-		"nodemon": "^2.0.7"
-	}
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
+    "concurrently": "^5.3.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
+    "joi": "^17.3.0",
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.5.0",
+    "sequelize-cli": "^6.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  }
 }
