--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "final-task",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "engines": {
-    "node": "10.x"
+    "node": "14.x"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "node index.js",
     "client": "npm start --prefix ../client",
     "dev": "concurrently \"npm start \" \"npm run client\""
   },
